# cierre_farmacias

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  PDF7_Traspaso.py  PDF_BAJA.py  PDF_Recoleccion.py  PDF_Tecnico.py  README.md  UploadExcel_GR.py  UploadExcel_Monse3GP.py  UploadExcel_Monse3GR.py  UploadExcel_Monse3Gq.py  alembic.ini  app.py  config.py  db_config.py  debug_env.ps1  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  run.py  start_app.bat  start_app.ps1
.github/workflows/: ci.yml
Plantillas/: Compromiso_Recoleccion.xlsx  Formatobajaactivo.xlsx  Informe Tecnico.xlsx  Template Traspasos.xlsx
Scripts/: activate  activate.bat
app/: __init__.py  admin.py  auth.py  pdf.py  uploads.py
cierre_farmacias/: __init__.py
cierre_farmacias_app/: __init__.py  extensions.py  models.py
docs/: installation_and_deployment.md  onboarding_guide.md  user_manual.md
js/: script.js
maintenance/: migrate_passwords.py
migrations/: README.md  env.py
scripts/: backup_db.sh  deploy.sh  logrotate.conf  rollback.sh  schedule_cron.sh
templates/: Adjuntos_4.html  Index_3.html  Index_Whats.html  Ordenes.html  Usuarios.html  accesos.html  activos.html  activos_4.html  activos_5.html  aplicacion.html  base.html  bootstrap_admin.html  dashboard2.html  dashboard2_old_19032025.html  detalles_2.html  index_excel_Monse5.html  lista_Seguridad_Gerencias.html  login.html  migrar_passwords.html  presentacion.html  signup.html  subdetalles_4.html  subdetalles_5.html  subordenes2.html  upload.html
tests/: test_app.py
(+51 files in other folders)
